# agentic-stack

./: .gitignore  LICENSE  README.md
cli/: README.md  pyproject.toml
cli/src/smartbiblia/: catalog.toml  cli.py  installer.py
mcp/: compose.yml
mcp/openalex/: Dockerfile  README.md  mcp_server.py
mcp/primo/: Dockerfile  README.md  mcp_server.py
mcp/recherche-data-gouv/: Dockerfile  mcp_server.py
mcp/sudoc-sru/: Dockerfile  README.md  mcp_server.py
skills/convert-records-unimarc/: SKILL.md
skills/convert-records-unimarc/scripts/: cli.py
skills/generate-search-queries/: SKILL.md
skills/generate-search-queries/prompts/: generate_search_queries.md
skills/generate-search-queries/schemas/: generate_search_queries.schema.json
skills/generate-search-queries/scripts/: cli.py
skills/resolve-authorities-idref/: SKILL.md
skills/resolve-authorities-idref/references/: llm.md
skills/resolve-authorities-idref/scripts/: cli.py
skills/search-records-hal/: SKILL.md
skills/search-records-hal/references/: llm.md
skills/search-records-hal/scripts/: cli.py
skills/search-records-sudoc/: SKILL.md
skills/search-records-sudoc/references/: examples.md  llm.md
skills/search-records-sudoc/scripts/: cli.py
skills/search-works-openalex/: SKILL.md
skills/search-works-openalex/scripts/: cli.py
skills/synthesize-literature/: SKILL.md
skills/synthesize-literature/prompts/: appraise_study_quality.md  extract_metadata.md  screen_study_prisma.md  summarize_paper.md  synthesize_papers_chronological.md  (+3 more)
skills/write-data-management-plan/: SKILL.md
(+10 files in other folders)
