[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartbiblia"
version = "0.1.0"
description = "CLI to install smartbiblia skills and MCP servers into your agent workspace"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude", "codex", "openclaw", "hermes", "skills", "mcp", "bibliography", "library", "research"]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
smartbiblia = "smartbiblia.cli:app"

[project.urls]
Repository = "https://github.com/smartbiblia-solutions/agentic-stack"

[tool.hatch.build.targets.wheel]
packages = ["src/smartbiblia"]
